{
    "name": "InputControls",
    "maps": [
        {
            "name": "MouseInput",
            "id": "df7fdcdc-5816-40b9-8163-dfe9eba8b3d9",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "7c88bc3f-c54f-4069-ac1a-c75bc0febda2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Left_Click",
                    "type": "Button",
                    "id": "f43152c8-f1c5-41a5-9b26-9dd4ad656e86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba32b5ca-309b-476e-9411-1f282e763918",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c2fe177-92ce-4c9c-a433-6d4a9fb5b17d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left_Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}